# bundle

./: .gitignore  Cargo.toml  LICENSE  README.md
grapple-bundle/: Cargo.toml
grapple-bundle-lib/: Cargo.toml  README.md
grapple-bundle-lib/src/: lib.rs
resources/algo/stm32f1/: STM32F103.json
resources/algo/stm32g4/: STM32G431.json  STM32G473.json
resources/svd/stm32l0/: STM32L0x2.svd  STM32L0x3.svd
src/: build.rs  flash.rs  main.rs  resources.rs  types.rs
