[package]
name = "factory-flash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
object = { version = "0.34.0", features = ["build"] }
probe-rs = "0.23.0"
serde = { version = "1.0.197", features = ["derive"] }
grapple-bundle = { version = "~0.1.0", path = "grapple-bundle" }
serde_json = "1.0.115"
svd-parser = "0.14.5"
zip = "0.6.6"
rust-embed = "8.3.0"
lazy_static = "1.4.0"
regex = "1.10.4"
human_bytes = "0.4.3"
indicatif = "0.17.8"
