[package]
name = "grapple-bundle"
version = "0.1.4"
edition = "2021"
description = "Grapple's Embedded Firmware and Bootloader Bundler and Flasher utility"
documentation = "https://docs.rs/grapple-bundle"
repository = "https://github.com/GrappleRobotics/bundle"
readme = "README.md"
authors = ["Jaci Brunning"]
license = "MIT"

exclude = ["grapple-bundle-lib/**/*"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
object = { git = "https://github.com/JaciBrunning/object.git", branch = "fix-elf-misalignment", features = ["build"] }
probe-rs = "0.23.0"
serde = { version = "1.0.197", features = ["derive"] }
grapple-bundle-lib = { version = "~0.1.0", path = "grapple-bundle-lib" }
serde_json = "1.0.115"
svd-parser = "0.14.5"
zip = "0.6.6"
rust-embed = "8.3.0"
lazy_static = "1.4.0"
regex = "1.10.4"
human_bytes = "0.4.3"
indicatif = "0.17.8"
reqwest = { version = "0.11.23", features = ["blocking"] }
home = "0.5.9"
